@@ -126,12 +126,8 @@ switches = [
             type=float,
             dest='maxAge',
         ),
-    ParseArgument('--black-market', '-bm',
-            help='Require stations with a black market.',
-            action='store_true',
-            dest='blackMarket',
-        ),
     PadSizeArgument(),
+    BlackMarketSwitch(),
     ParseArgument('--ls-penalty', '--lsp',
             help="Penalty per 1kls stations are from their stars.",
             default=0.6,
